add document types. update swagger def so generation works. (#213)
