# internal/controllers/user_devices_controller.go
@@ -663,7 +663,7 @@ func (udc *UserDevicesController) DeleteUserDevice(c *fiber.Ctx) error {
 // @Description  Returns the data the user must sign in order to mint this device.
 // @Tags         user-devices
 // @Param        userDeviceID path string true "user device ID"
-// @Success      200 {object} controllers.MintSignatureData
+// @Success      200 {object} signer.TypedData
 // @Security     BearerAuth
 // @Router       /user/devices/{userDeviceID}/commands/mint [get]
 func (udc *UserDevicesController) GetMintDataToSign(c *fiber.Ctx) error {
